fix: minimal spacing and rounded design

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
   --font-sans: Inter, ui-sans-serif, sans-serif, system-ui;
   --font-mono: JetBrains Mono, ui-monospace, monospace;
   --font-serif: Lora, serif;
-  --radius: 0.95rem;
+  --radius: 0.85rem;
   --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
   --tracking-tight: calc(var(--tracking-normal) - 0.025em);
   --tracking-wide: calc(var(--tracking-normal) + 0.025em);
@@ -106,7 +106,7 @@
 }
 
 :root {
-  --radius: 0.95rem;
+  --radius: 0.85rem;
   --card: oklch(0.994 0 0);
   --card-foreground: oklch(0 0 0);
   --popover: oklch(0.9911 0 0);
@@ -147,7 +147,7 @@
   --shadow-offset-x: 0px;
   --shadow-offset-y: 2px;
   --letter-spacing: 0em;
-  --spacing: 0.29rem;
+  --spacing: 0.25rem;
   --shadow-2xs: 0px 2px 3px 0px hsl(0 0% 0% / 0.08);
   --shadow-xs: 0px 2px 3px 0px hsl(0 0% 0% / 0.08);
   --shadow-sm: 0px 2px 3px 0px hsl(0 0% 0% / 0.16),
@@ -236,7 +236,7 @@
   --sidebar-border: oklch(0.3289 0.0092 268.3843);
   --sidebar-ring: oklch(0.6716 0.1769 250.3961);
   --destructive-foreground: oklch(1 0 0);
-  --radius: 0.95rem;
+  --radius: 0.55rem;
   --font-sans: Inter, ui-sans-serif, sans-serif, system-ui;
   --font-serif: Lora, serif;
   --font-mono: JetBrains Mono, ui-monospace, monospace;
@@ -247,7 +247,7 @@
   --shadow-offset-x: 0px;
   --shadow-offset-y: 2px;
   --letter-spacing: 0em;
-  --spacing: 0.29rem;
+  --spacing: 0.25rem;
   --shadow-2xs: 0px 2px 3px 0px hsl(0 0% 0% / 0.08);
   --shadow-xs: 0px 2px 3px 0px hsl(0 0% 0% / 0.08);
   --shadow-sm: 0px 2px 3px 0px hsl(0 0% 0% / 0.16),
